# franciscus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIB_HANDOFF.md  GITHUB_CONTRIBUTIONS_PLAN.md  Makefile  README.md  ROADMAP.md
app/: .env  package-lock.json  package.json  vite.config.ts
app/src/: app.css  app.html  service-worker.ts
app/src/lib/: AnnotationPills.svelte  DbGate.svelte  DbProgressBar.svelte  DecorativeImage.svelte  ExpandableDescription.svelte  Footer.svelte  LanguagePicker.svelte  Modal.svelte  ProseEditor.svelte  Reader.svelte  RelationPicker.svelte  RelationPills.svelte  ScriptureModal.svelte  SearchResultList.svelte  StudyPane.svelte  TopNav.svelte  TopicFilterInput.svelte  UpdatePrompt.svelte  annotationDiff.test.ts  annotationDiff.ts  bookmarks.svelte.ts  categories.ts  contribute.ts  db.ts  dbState.ts  edits.svelte.ts  github.svelte.ts  index.ts  progress.svelte.ts  proseDiff.test.ts  proseDiff.ts  reader.ts  study.ts  sw.ts  truncateDescription.test.ts  truncateDescription.ts  types.ts  utils.ts  viewport.svelte.ts  wide.svelte.ts
app/src/lib/i18n/: en.json  index.ts  it.json  store.svelte.ts
app/src/lib/scripture/: bibbiaedu.ts  biblegateway.ts  citation.ts  index.ts  psalms.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/about/: +page.svelte
app/src/routes/ai/: +page.svelte
app/src/routes/attributes/: +page.svelte
app/src/routes/study/: +page.ts  (+1 more)
app/static/: manifest.webmanifest  robots.txt  sitemap.xml
docs/: topic-reader-refactor.md
server/: Cargo.toml
server/src/: db.rs  main.rs  models.rs  parser.rs
(+11 files in other folders)
