[package]
name = "franciscus-server"

# *******************************************************************************************
# NOTICE:
#   This Rust Pipeline has an indipendent Rs-SemVer version tracking 
#   (minor breaking until release).
#   
#   Compatible App Version: 1.1.0
#
# *******************************************************************************************
version = "0.3.0" 

edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
comrak = "0.52.0"
